# node-rust-ffi

./: Cargo.toml  README.md  package-lock.json  package.json
src/: event_aggregator.rs  index.js  lib.rs
