[package]
name = "node-rust-ffi"
version = "0.1.0"
description = "node ffi to use rust"
authors = ["shreymahendru"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
num_cpus = "1"


